// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common / Wallet Onboarding CMS profile vs. MetaMask address mismatch 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <h4
        className="sc-EHOje gTvBKb"
      >
        Wallet Connected
      </h4>
      <p
        style={
          Object {
            "color": "#f2524a",
          }
        }
      >
        Your WordPress user profile wallet address does not match your MetaMask wallet address
      </p>
      <p
        className="sc-cbMPqi hQWejW"
      >
        Profile wallet address
      </p>
      <span
        className="sc-dPNhBE dnaDng"
      >
        0x123abc00000000000000000000000000000x123abc
      </span>
       
      <p
        className="sc-cbMPqi hQWejW"
      >
        Connected wallet address
      </p>
      <div
        className="sc-hZSUBg bRiJVV"
      >
        <div
          className="sc-cMhqgX kIcmrJ"
        >
          <img
            className="sc-cmTdod kcwOOi"
            src={
              Object {
                "0": "t",
                "1": "e",
                "10": "s",
                "11": "t",
                "12": "u",
                "13": "b",
                "2": "s",
                "3": "t",
                "4": "-",
                "5": "f",
                "6": "i",
                "7": "l",
                "8": "e",
                "9": "-",
                "default": "test-file-stub",
              }
            }
          />
          0xabc1230000000000000000000000000000abc123
        </div>
      </div>
       
      <div
        className="sc-izvnbC cmNTlV"
      >
        <button
          className="sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          onClick={[Function]}
          size="MEDIUM_WIDE"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
          type="button"
        >
          Update Profile Address
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            CMS profile vs. MetaMask address mismatch
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        metamaskWalletAddress
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            0xabc1230000000000000000000000000000abc123
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        profileWalletAddress
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            0x123abc00000000000000000000000000000x123abc
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        saveAddressToProfile
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            saveAddressToProfile
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding Connected 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <h4
        className="sc-EHOje gTvBKb"
      >
        Wallet Connected
      </h4>
      <p
        className="sc-cbMPqi hQWejW"
      >
        Your wallet address
      </p>
      <div
        className="sc-hZSUBg bRiJVV"
      >
        <div
          className="sc-cMhqgX kIcmrJ"
        >
          <img
            className="sc-cmTdod kcwOOi"
            src={
              Object {
                "0": "t",
                "1": "e",
                "10": "s",
                "11": "t",
                "12": "u",
                "13": "b",
                "2": "s",
                "3": "t",
                "4": "-",
                "5": "f",
                "6": "i",
                "7": "l",
                "8": "e",
                "9": "-",
                "default": "test-file-stub",
              }
            }
          />
          0xabc1230000000000000000000000000000abc123
        </div>
      </div>
       
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Connected
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        metamaskWalletAddress
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            0xabc1230000000000000000000000000000abc123
                          </span>
                          "
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding Locked 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <img
        className="sc-dYzWWc jmxEgQ"
        src={
          Object {
            "0": "t",
            "1": "e",
            "10": "s",
            "11": "t",
            "12": "u",
            "13": "b",
            "2": "s",
            "3": "t",
            "4": "-",
            "5": "f",
            "6": "i",
            "7": "l",
            "8": "e",
            "9": "-",
            "default": "test-file-stub",
          }
        }
      />
      <h4
        className="sc-EHOje gTvBKb"
      >
        Not logged in to wallet
      </h4>
      <p>
        Please open the MetaMask extension and follow the instructions to log in to your wallet. After you are logged in, you can continue with your newsroom smart contract.
         
        <a
          target="_blank"
        >
          Need help?
        </a>
      </p>
      <p>
        Once you are on logged in, refresh this page.
      </p>
      <p>
        <button
          className="sc-bJTOcE bNWcNP sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          onClick={[Function]}
          size="MEDIUM_WIDE"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
          type="button"
        >
          Refresh
        </button>
      </p>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Locked
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        walletLocked
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding No Provider 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <h4
        className="sc-EHOje gTvBKb"
      >
        It looks like you aren’t logged in to your wallet
      </h4>
      <p>
        New to using a digital wallet? Having a wallet is mandatory and we recommend
         
        <a
          href="https://metamask.io/"
          target="_blank"
        >
          MetaMask
        </a>
         
        <img
          className="sc-gMcBNU ffckjP sc-cmTdod kcwOOi"
          src={
            Object {
              "0": "t",
              "1": "e",
              "10": "s",
              "11": "t",
              "12": "u",
              "13": "b",
              "2": "s",
              "3": "t",
              "4": "-",
              "5": "f",
              "6": "i",
              "7": "l",
              "8": "e",
              "9": "-",
              "default": "test-file-stub",
            }
          }
        />
         to manage your transactions.
         
        <a
          target="_blank"
        >
          Read this FAQ
        </a>
        .
      </p>
      <p>
        <a
          className="sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          href="https://metamask.io/"
          size="MEDIUM_WIDE"
          target="_blank"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
        >
          Open MetaMask.io
           
          <span
            className="sc-kkwfeq kNjhZz"
          >
            <svg
              height="11"
              viewBox="0 0 11 11"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m10.098 7.998h-1.279v-4.823l-6.914 6.923-.905-.905 6.923-6.915h-4.823v-1.278h6.998z"
                fill="#23282d"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </a>
        <span
          style={
            Object {
              "fontSize": 13,
              "marginLeft": 16,
            }
          }
        >
          Once the extension is installed,
           
          <a
            href="javascript:void(0)"
            onClick={[Function]}
          >
            refresh this page
          </a>
          .
        </span>
      </p>
      <p>
        After you've set up MetaMask, you'll receive a wallet address and you'll be able to buy ETH with your bank or credit card. We recommend purchasing USD$50 of ETH to start. Note: Processing times can vary, and it can take up to 7 days for the ETH to be deposited in your wallet.
      </p>
      <p>
        You will use your MetaMask wallet to set up and manage your smart contract, as well as sign, index, and archive posts to the Ethereum blockchain. Make sure you've saved your
         
        <a
          href="undefinedarticles/360017414652-What-is-a-recovery-phrase-seed-and-why-is-it-important-to-secure-it-"
          target="_blank"
        >
          seed phrase
        </a>
         
        from MetaMask in a safe place.
      </p>
      <p
        style={
          Object {
            "fontSize": 13,
          }
        }
      >
        <span
          style={
            Object {
              "color": "#23282d",
              "fontWeight": 600,
            }
          }
        >
          Already have a wallet?
        </span>
        <span
          style={
            Object {
              "color": "#72777c",
              "marginLeft": 12,
            }
          }
        >
          Make sure it's unlocked and connected to the 
          , and then
           
          <a
            href="javascript:void(0)"
            onClick={[Function]}
          >
            refresh this page
          </a>
          .
        </span>
      </p>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            No Provider
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        noProvider
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding Not Enabled 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <h4
        className="sc-EHOje gTvBKb"
      >
        MetaMask not enabled
      </h4>
      <p>
        Press this button to enable MetaMask for this domain.
      </p>
      <p>
        <button
          className="sc-bJTOcE bNWcNP sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          onClick={[Function]}
          size="MEDIUM_WIDE"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
          type="button"
        >
          Enable
        </button>
      </p>
      <p>
        If you do not see the MetaMask popup, please click the 
        <img
          className="sc-gMcBNU ffckjP sc-cmTdod kcwOOi"
          src={
            Object {
              "0": "t",
              "1": "e",
              "10": "s",
              "11": "t",
              "12": "u",
              "13": "b",
              "2": "s",
              "3": "t",
              "4": "-",
              "5": "f",
              "6": "i",
              "7": "l",
              "8": "e",
              "9": "-",
              "default": "test-file-stub",
            }
          }
        />
         icon in your browser address bar.
      </p>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Not Enabled
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        notEnabled
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding Save address to CMS profile 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <h4
        className="sc-EHOje gTvBKb"
      >
        Wallet Connected
      </h4>
      <p>
        Your wallet is connected. Now you can add your public wallet address to your WordPress user profile.
      </p>
      <p
        className="sc-cbMPqi hQWejW"
      >
        Your wallet address
      </p>
      <div
        className="sc-hZSUBg bRiJVV"
      >
        <div
          className="sc-cMhqgX kIcmrJ"
        >
          <img
            className="sc-cmTdod kcwOOi"
            src={
              Object {
                "0": "t",
                "1": "e",
                "10": "s",
                "11": "t",
                "12": "u",
                "13": "b",
                "2": "s",
                "3": "t",
                "4": "-",
                "5": "f",
                "6": "i",
                "7": "l",
                "8": "e",
                "9": "-",
                "default": "test-file-stub",
              }
            }
          />
          0xabc1230000000000000000000000000000abc123
        </div>
      </div>
       
      <div
        className="sc-izvnbC cmNTlV"
      >
        <button
          className="sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          onClick={[Function]}
          size="MEDIUM_WIDE"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
          type="button"
        >
          Save to Your Profile
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Save address to CMS profile
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        metamaskWalletAddress
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            0xabc1230000000000000000000000000000abc123
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        saveAddressToProfile
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            saveAddressToProfile
                          </span>
                          }
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common / Wallet Onboarding Wrong Network 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-geAPOV clEsXc"
    >
      <img
        className="sc-dYzWWc jmxEgQ"
        src={
          Object {
            "0": "t",
            "1": "e",
            "10": "s",
            "11": "t",
            "12": "u",
            "13": "b",
            "2": "s",
            "3": "t",
            "4": "-",
            "5": "f",
            "6": "i",
            "7": "l",
            "8": "e",
            "9": "-",
            "default": "test-file-stub",
          }
        }
      />
      <h4
        className="sc-EHOje gTvBKb"
      >
        Change your network
      </h4>
      <p>
        Looks like you’re using an unsupported Ethereum network. Make sure you're using the
         
        Main Ethereum Network
        .
         
        <a
          href="undefinedarticles/360017414812-How-do-I-switch-networks-in-MetaMask-"
          target="_blank"
        >
          Read this tutorial
        </a>
         
        to switch networks in MetaMask 
        <img
          className="sc-gMcBNU ffckjP sc-cmTdod kcwOOi"
          src={
            Object {
              "0": "t",
              "1": "e",
              "10": "s",
              "11": "t",
              "12": "u",
              "13": "b",
              "2": "s",
              "3": "t",
              "4": "-",
              "5": "f",
              "6": "i",
              "7": "l",
              "8": "e",
              "9": "-",
              "default": "test-file-stub",
            }
          }
        />
      </p>
      <p>
        Once you are on the correct network, refresh this page.
      </p>
      <p>
        <button
          className="sc-bJTOcE bNWcNP sc-kEYyzF bnmMlI sc-hMqMXs bMlmhm"
          onClick={[Function]}
          size="MEDIUM_WIDE"
          theme={
            Object {
              "primaryButtonBackground": "#2B56FF",
              "primaryButtonColor": "#FFFFFF",
              "primaryButtonDisabledBackground": "rgba(43, 86, 255, 0.5)",
              "primaryButtonDisabledColor": "#FFFFFF",
              "primaryButtonFontWeight": "normal",
              "primaryButtonHoverBackground": "#4066FF",
              "primaryButtonTextTransform": "uppercase",
              "sansSerifFont": "\\"Libre Franklin\\", sans-serif",
            }
          }
          type="button"
        >
          Refresh
        </button>
      </p>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Common / Wallet Onboarding
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Wrong Network
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    StorybookProvider
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    WalletOnboarding
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        enable
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            enable
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        wrongNetwork
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        requiredNetworkNiceName
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Main Ethereum Network
                          </span>
                          "
                        </span>
                      </span>
                       
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    StorybookProvider
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              StorybookProvider
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              WalletOnboarding
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
